# fp2023

C/demos/: demoBinarySearch.ml  demoFact.ml  demoInterpret.ml  demoParse.ml  dune  interpretTests.t  parsingTests.t
C/lib/: ast.ml  dune  interpret.ml  interpretTypes.ml  parser.ml
CSharpOOP/demos/: demoInterpreter.ml  demoParse.ml  dune  fac.cs  interpreterFailTests.t  interpreterTests.t  parsingTests.t  test.cs
CSharpOOP/lib/: ast.ml  dune  i_tests.ml  i_tests.mli  interpreter.ml  interpreter.mli  monad.ml  monad.mli  p_tests.ml  p_tests.mli  parser.ml  parser.mli  state_type.ml  state_type.mli  tc_tests.ml  tc_tests.mli  tests.ml  tests.mli  type_checker.ml  type_checker.mli
Cypher/: Cypher.opam  dune-project
Cypher/demos/: demoInterpret.ml  demoInterpret.t  demoParse.ml  demoParse.t  dune
Cypher/lib/: ast.ml  ast.mli  dune  interpret.ml  interpret.mli  parser.ml  parser.mli  test.ml
DAhmetov/: DAhmetov.opam  README.md  dune  dune-project
DAhmetov/demos/: demoInterpret.ml  demoInterpret.t  demoParse.ml  demoParse.t  demo_fact.ml  dune  test.t
DAhmetov/lib/: ast.ml  dune  interpret.ml  interpretTest.ml  parser.ml  parserTest.ml
DAkhmedov/demos/: demo.ml  demo.t  dune  fact_demo.ml  lists_demo.ml
DAkhmedov/lib/: ast.ml  ast.mli  dune  inferencer.ml  inferencer.mli  interpreter.mli  parser.mli  tests.mli  typing.mli
FSharpUnitsOfMeasure/: README.md
FSharpUnitsOfMeasure/lib/: ast.ml  dune  interpret_error.ml  interpret_error.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli
FSharpUnitsOfMeasure/lib/demos/: demos.ml  demos.t  dune
FSharpUnitsOfMeasure/lib/tests/: dune  interpreter_tests.ml  interpreter_tests.mli  parser_tests.ml  parser_tests.mli
Javascript/: .ocamlformat  Javascript.opam  README.md  dune-project
Javascript/demos/: demoArray.js  demoCPSFactorial.js  demoClosures.js  demoClosures.ml  demoFactorial.js  demoFactorial.ml  demoFile.ml  demoFixFactorial.js  demoObjects.js  demoObjects.ml  demoString.ml  dune  test.t
Javascript/demos/javascriptSamples/: demoArray.js
Javascript/lib/: VTypes.mli  WATnWtfjsTests.ml  ast.ml  ast.mli  dune  interpreter.ml  interpreter.mli  interpreterTests.ml  parser.ml  parser.mli  parserTests.ml  parserTests.mli  print.ml  print.mli  tests.ml  utils.ml  utils.mli
OCaml+PolymorphicVariants/: dune-project
OCaml+PolymorphicVariants/demos/: demoInfer.ml  demoInfer.t  demoInterpret.ml  demoInterpret.t  demoParse.ml  demoParse.t  dune
OCaml+PolymorphicVariants/lib/: ast.ml  ast.mli  dune  infer.ml  infer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  tests.ml  tests.mli  typedtree.ml  typedtree.mli
OCamlTyEff/lib/infer/: dune
OCamlWithEffects/: README.md
OCamlWithEffects/demos/: demo.ml  demoCharListSum.t  demoComplexEffect.t  demoFact.t  demoFoldLeft.t  demoGreaterOrLess.t  demoSafeDiv.t  dune
OCamlWithEffects/lib/: dune  run.ml  run.mli
OCamlWithEffects/lib/ast/: ast.mli
OCamlWithEffects/lib/inferencer/: inf_errors.ml  inf_errors.mli  inf_pprint.ml  inf_pprint.mli  inferencer.ml  inferencer.mli  typedtree.ml  typedtree.mli
OCamlWithEffects/lib/interpreter/: int_errors.ml  int_errors.mli  int_pprint.ml  int_pprint.mli  interpreter.ml  interpreter.mli  values.ml  values.mli
OCamlWithEffects/lib/parser/: auxiliary.ml  auxiliary.mli  parser.ml  parser.mli  parser_errors.ml  parser_errors.mli  parser_pprint.ml  parser_pprint.mli
OCamlWithEffects/tests/: dune
OCamlWithEffects/tests/inferencer/: dune  inf_complex_expr.ml  inf_declaration_and_functions.ml  inf_effects_and_handlers.ml  inf_list_and_tuple.ml  inf_pattern_matching.ml  inf_polymorphysm.ml  inf_simple_expr.ml
OCamlWithEffects/tests/interpreter/: dune  int_complex_expr.ml  int_declaration_and_functions.ml  int_effects_and_handlers.ml  int_list_and_tuple.ml  int_list_and_tuple.mli  int_pattern_matching.ml  int_simple_expr.ml
OCamlWithEffects/tests/parser/: dune  parse_complex_expr.ml  parse_declaration_and_functions.ml  parse_effects_and_handlers.ml  parse_list_and_tuple.ml  parse_pattern_matching.ml  parse_simple_expr.ml
OCamlWithEffects/tests/runner/: dune  test_run.ml
OCaml_BidirectionalRecords/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  tests.ml  tests.mli  typing.ml  typing.mli
OCaml_ExtensibleVariantTypes/: OCaml_ExtensibleVariantTypes.opam  README.md  dune-project
OCaml_ExtensibleVariantTypes/demos/: cps_demo.ml  demo.t  dune  fact_demo.t  lists_demo.t
OCaml_ExtensibleVariantTypes/lib/: ast.ml  ast.mli  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  tests.ml  typing.ml  typing.mli
Python/: Python.opam  dune-project
Python/demos/: adding_class_to_env_test.ml  anon_func_test.ml  change_func_test.ml  change_print_test.ml  demo_fact.ml  dune  dynamic_adding_test.ml  interpreter.ml  interpreter_fact_test.ml  method_call_test.ml  parse_and_interpret_fact_test.ml  string_interpolation_test.ml  test.t  tests.t
Python/lib/: ast.ml  ast.mli  interpreter.ml  interpreter.mli  parser.ml
cov/Lambda/: percent.txt
cov/Lambda/lib/: interpret.ml.html  lambda.ml.html
docs/CSharpOOP/: index.html
docs/CSharpOOP/CSharpOOP/: index.html
docs/CSharpOOP/CSharpOOP/Lambda_lib/: index.html
docs/Lambda/: index.html
docs/Lambda/Lambda/: index.html
docs/Lambda/Lambda/Lambda_lib/: index.html
docs/OCamlTyEff/: index.html
docs/OCamlTyEff/OCamlTyEff/: index.html
docs/OCamlWithEffects/: index.html
docs/OCamlWithEffects/OCamlWithEffects/: index.html
mini-SQL/: README.md  REPL.ml  dune-project  mini-SQL.opam
mini-SQL/demos/: demoInterpret.ml  demoParse.ml  dune  executeTest.t  parsingTests.t
mini-SQL/lib/: ast.ml  ast.mli  dune  environment.ml  environment.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  test.ml  test.mli  typecheck.ml  typecheck.mli  types.ml  types.mli  utils.ml  utils.mli
mini-SQL/test_data/data/: table0.csv  table1.csv  table2.csv
mini-SQL/test_data/database1/: table1.csv
mini-SQL/test_data/two_files_database/: myFile0.csv  myFile1.csv  table1.csv
(+57 files in other folders)
