(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Ahmetov Temerlan")

(maintainers "Ahmetov Temerlan")

(bug_reports "FIXME where to put bug reports about the code")

(homepage "https://github.com/Lesh79/fp2023")

(package
 (name DAhmetov) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "miniML")
 (description "miniMl")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
