(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Kuarni <kuarni22@gmail.com>, AlexShmak <lexnder9@gmail.com>")

(maintainers "Kuarni <kuarni22@gmail.com>, AlexShmak <lexnder9@gmail.com>")

(bug_reports "https://github.com/AlexShmak/fp2023/issues")

(homepage "https://github.com/AlexShmak/fp2023")

(package
 (name Javascript)
 (synopsis "Parser for javascript and it's interepreter in future")
 (description
  "Here is parser of javascript which can parse factorial code")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ))
