(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Kuarni <kuarni22@gmail.com>" , "AlexShmak <lexnder9@gmail.com>")

(maintainers
 "Kuarni <kuarni22@gmail.com>"
 ,
 "AlexShmak <lexnder9@gmail.com>")

(bug_reports "https://github.com/AlexShmak/fp2023/issues")

(homepage "https://github.com/AlexShmak/fp2023")

(package
 (name Javascript)
 (synopsis "Interpreter for Javascript")
 (description
  "An interpreter and parser for Javascript. It can work with arrays, functions, let statement,\n  for, while loops, objects (class isn't supported). \nThe interpreter work in string mode by default. \n  You can print values with alert, console.log and return from main body.")
 (version 0.2)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)))
