(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "David Akhmedov")

(maintainers "David Akhmedov")

(bug_reports "https://github.com/Kakadu/fp2023/issues")

(homepage
 "https://github.com/Kakadu/fp2023/tree/master/OCaml_ExtensibleVariantTypes")

(package
 (name OCaml_ExtensibleVariantTypes) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "Interpreter of OCaml")
 (description "Interpreter of OCaml")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)))
