(library
 (name csharp_lib)
 (public_name CSharpOOP.Lib)
 (modules Ast Parser Type_checker Monad State_type)
 (libraries base angstrom str)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))

(library
 (name tests)
 (modules tests)
 (libraries csharp_lib)
 (preprocess
  (pps ppx_expect ppx_inline_test ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
