(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(executable
 (name demoString)
 (modules demoString)
 (libraries javascript_lib stdio))

(executable
 (name demoFile)
 (modules demoFile)
 (libraries javascript_lib stdio))

(cram
 (deps
  ./demoString.exe
  ./demoFile.exe
  ./demoFactorial.js
  ./demoObjects.js
  ./demoClosures.js
  ./demoArray.js))
