(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries OCaml+PolymorphicVariants.Lib)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name demoInfer)
 (modules demoInfer)
 (public_name demoInfer)
 (libraries OCaml+PolymorphicVariants.Lib)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name demoInterpret)
 (modules demoInterpret)
 (public_name demoInterpret)
 (libraries OCaml+PolymorphicVariants.Lib)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (deps %{bin:demoParse} %{bin:demoInfer} %{bin:demoInterpret}))
