(executable
 (name demoAO)
 (modules demoAO)
 (public_name demoAO)
 (libraries Lib)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name demoInterpret)
 (modules demoInterpret)
 (public_name demoInterpret)
 (libraries Lib stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries Lib stdio)
 (instrumentation
  (backend bisect_ppx)))

; (cram
;  (applies_to interpretTests)
;  (deps
;   ./demoNO.exe
;   ./demoAO.exe
;   ./demoParse.exe
;   ../REPL.exe
;   ./demo_input.txt))

(cram
 (applies_to parsingTests)
 (deps ./demoParse.exe))

(cram
 (applies_to executeTest)
 (deps ./demoInterpret.exe))
