(executable
 (name demoInterpret)
 (modules demoInterpret)
 (public_name demoInterpret)
 (libraries Lib stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries Lib stdio)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (applies_to parsingTests)
 (deps ./demoParse.exe))

(cram
 (applies_to executeTest)
 (deps
  ./demoInterpret.exe
  ../test_data/data/table0.csv
  ../test_data/data/table1.csv
  ../test_data/data/table2.csv))
